kubernetes-files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: todo-deployment
spec:
 selector:
  matchLabels:
   app: todo-8000
 replicas: 2
 template:
  metadata:
   labels:
    app: todo-8000
  spec:
   containers:
   - name: todo-8000
     image: siddhant1223/demo_django:v1
     ports:
     - containerPort: 8000
     resources:
      requests:
       cpu: 100m
