kubernetes-files/hpa.yml
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
 name: todo-deployment
spec:
 scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: todo-deployment
 minReplicas: 1
 maxReplicas: 10
 targetCPUUtilizationPercentage: 10
