kubernetes-files/clusterip.yml
apiVersion: v1
kind: Service
metadata:
 name: todo-8000
spec:
 type: ClusterIP
 ports:
 - protocol: "TCP"
   port: 8000
   targetPort: 8000
