kubernetes-files/nodePort.yml
apiVersion: v1
kind: Service
metadata: 
 name: sample-svc
 labels:
  apps: todo-8000
spec:
 type: NodePort
 ports:
 - port: 8000
   nodePort: 30023
 selector: 
  app: todo-deploy
