kubernetes-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: ingress
spec:
 rules:
 - host: "test-django.com"
   http:
    paths:
    - pathType: Prefix
      path: "/todos/"
      backend:
       service:
        name: todo-8000
        port:
         number: 8000
